--- a/app/globals.scss
+++ b/app/globals.scss
@@ -15,20 +15,24 @@ body{
 }
 
 /* width */
-.custom-scrollbar ::-webkit-scrollbar {
+.custom-scrollbar ::-webkit-scrollbar{
     width: 6px;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
     height: 10px;
 }
 
 /* Track */
-.custom-scrollbar ::-webkit-scrollbar-track {
-    background: #7e7e7e;
+::-webkit-scrollbar-track {
+    background: #bbbbbb;
     border-radius: 4px;
 }
 
 /* Handle */
-.custom-scrollbar ::-webkit-scrollbar-thumb {
-    background: #bbbbbb;
+::-webkit-scrollbar-thumb {
+    background: #7e7e7e;
     border-radius: 4px;
 }
 
