--- a/app/globals.scss
+++ b/app/globals.scss
@@ -15,6 +15,10 @@ body{
     background-color: #F5F5F5;
 }
 
+textarea{
+    line-height: 150% !important;
+}
+
 /* width */
 .custom-scrollbar::-webkit-scrollbar{
     width: 6px;
