--- a/app/globals.scss
+++ b/app/globals.scss
@@ -132,6 +132,7 @@ input::-ms-clear {
 
 .tagify {
     width: 100%;
+    height: 100%;
     border-radius: 6px;
     border: 1px solid rgba(0, 0, 0, 0.3);
     padding: 4px 4px;
