--- a/app/globals.scss
+++ b/app/globals.scss
@@ -212,123 +212,100 @@ input::-ms-clear {
 // FullCalendar Styling
 
 // General
-.fc a,
-.fc .fc-button,
-.fc .fc-daygrid-week-number,
-.fc .fc-col-header-cell-cushion,
-.fc .fc-daygrid-day-number,
-.fc .fc-event-title,
-.fc .fc-daygrid-day-top {
-    font-size: 1em; 
-}
+// .fc a,
+// .fc .fc-button,
+// .fc .fc-daygrid-week-number,
+// .fc .fc-col-header-cell-cushion,
+// .fc .fc-daygrid-day-number,
+// .fc .fc-event-title,
+// .fc .fc-daygrid-day-top {
+//     font-size: 1em; 
+// }
 
 .fc .fc-toolbar-title {
-    font-weight: 600; //semibold
+    font-size: 24px !important;
+    font-weight: bold; //semibold
+}
+
+.fc .fc-header-toolbar {
+    margin-bottom: 8px !important;
 }
 
 .fc .fc-button {
+    padding: 6px 8px;
+    border-color: transparent;
     color: $white;
     background-color: $basic-blue;
+    transition: background-color 0.3s ease-in-out;
 }
 
-.fc .fc-button:hover {
+.fc-prev-button {
+    margin-right: 4px !important;
+}
+
+.fc .fc-button:hover:not(:disabled) {
     color: $basic-blue;
-    background-color: $white;
+    background-color: transparent;
     border-color: $basic-blue;
+}
+
+.fc-toolbar-chunk {
+    display: flex;
+    align-items: center;
 }
 
 // Tablets
 @media screen and (max-width: 768px) {
-
-    .fc a,
-    .fc .fc-button,
-    .fc .fc-daygrid-week-number,
-    .fc .fc-col-header-cell-cushion,
-    .fc .fc-toolbar-title,
-    .fc .fc-daygrid-day-number,
-    .fc .fc-event-title,
-    .fc .fc-daygrid-day-top {
-        font-size: 0.75em; 
-    }
-
-    .fc a {
-        font-size: 0.75em; 
-    }
-
-    .fc .fc-button {
-        font-size: 0.75em; 
-    }
-
-    .fc .fc-daygrid-week-number {
-        font-size: 0.75em; 
-    }
-
-    .fc .fc-col-header-cell-cushion {
-        font-size: 0.75em;
-    }
-
     .fc .fc-toolbar-title {
-        font-size: 1.5em;
-    }
-
-    .fc .fc-daygrid-day-number {
-        font-size: 0.75em;
-    }
-
-    .fc .fc-event-title {
-        font-size: 0.75em;
-    }
-
-    .fc .fc-daygrid-day-top {
-        font-size: 0.75em;
+        font-size: 20px !important;
     }
 }
 
-// Smartphones
-@media screen and (max-width: 480px) {
-    .fc a,
-    .fc .fc-button,
-    .fc .fc-daygrid-week-number,
-    .fc .fc-col-header-cell-cushion,
-    .fc .fc-toolbar-title,
-    .fc .fc-daygrid-day-number,
-    .fc .fc-event-title,
-    .fc .fc-daygrid-day-top {
-        font-size: 0.5em;
-    }
+// // Smartphones
+// @media screen and (max-width: 480px) {
+//     .fc a,
+//     .fc .fc-button,
+//     .fc .fc-daygrid-week-number,
+//     .fc .fc-col-header-cell-cushion,
+//     .fc .fc-toolbar-title,
+//     .fc .fc-daygrid-day-number,
+//     .fc .fc-event-title,
+//     .fc .fc-daygrid-day-top {
+//         font-size: 0.5em;
+//     }
 
-    .fc a {
-        font-size: 0.5em;
-    }
+//     .fc a {
+//         font-size: 0.5em;
+//     }
 
-    .fc .fc-button {
-        font-size: 0.75em;
-    }
+//     .fc .fc-button {
+//         font-size: 0.75em;
+//     }
 
-    .fc .fc-daygrid-week-number {
-        font-size: 0.5em;
-    }
+//     .fc .fc-daygrid-week-number {
+//         font-size: 0.5em;
+//     }
 
-    .fc .fc-col-header-cell-cushion {
-        font-size: 0.6em;
-    }
+//     .fc .fc-col-header-cell-cushion {
+//         font-size: 0.6em;
+//     }
 
-    .fc .fc-toolbar-title {
-        font-size: 1.5em;
-    }
+//     .fc .fc-toolbar-title {
+//         font-size: 1.5em;
+//     }
 
-    .fc .fc-daygrid-day-number {
-        font-size: 0.8em;
-    }
+//     .fc .fc-daygrid-day-number {
+//         font-size: 0.8em;
+//     }
 
-    .fc .fc-event-title {
-        font-size: 0.5em;
-    }
+//     .fc .fc-event-title {
+//         font-size: 0.5em;
+//     }
 
-    .fc .fc-daygrid-day-top {
-        font-size: 0.8em;
-    }
-}
+//     .fc .fc-daygrid-day-top {
+//         font-size: 0.8em;
+//     }
+// }
 
 
 
