--- a/app/globals.scss
+++ b/app/globals.scss
@@ -254,6 +254,27 @@ input::-ms-clear {
     align-items: center;
 }
 
+.fc-col-header-cell {
+    background-color: $basic-blue !important;
+    color: white !important;
+}
+
+.fc-event .fc-event-main, .fc .fc-daygrid-event{
+    transition: z-index 0.5s ease-in-out;
+}
+
+.fc-event .fc-event-main:hover, .fc .fc-daygrid-event:hover{
+    z-index: 9997 !important;
+}
+
+.fc .fc-daygrid-body{
+    position: static !important;
+}
+
+.fc .fc-scroller-harness{
+    overflow: visible !important;
+}
+
 // Tablets
 @media screen and (max-width: 768px) {
     .fc .fc-toolbar-title {
