fix popover ui issue on timeline page

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -259,12 +259,12 @@ input::-ms-clear {
     color: white !important;
 }
 
-.fc-event .fc-event-main, .fc .fc-daygrid-event{
-    transition: z-index 0.5s ease-in-out;
-}
+// .fc-event .fc-event-main, .fc .fc-daygrid-event{
+//     transition: z-index ease-in-out;
+// }
 
 .fc-event .fc-event-main:hover, .fc .fc-daygrid-event:hover{
-    z-index: 9997 !important;
+    z-index: 500 !important;
 }
 
 .fc .fc-daygrid-body{
