--- a/app/globals.scss
+++ b/app/globals.scss
@@ -4,6 +4,7 @@
 
 @import "@yaireo/tagify/dist/tagify.css";
 @import "./mention.scss";
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
 $black: #2B2B2B;
 $dark-blue: #1A1B36;
