--- a/app/globals.scss
+++ b/app/globals.scss
@@ -133,6 +133,7 @@ input::-ms-clear {
 .tagify {
     width: 100%;
     height: 100%;
+    min-height: 44px;
     border-radius: 6px;
     border: 1px solid rgba(0, 0, 0, 0.3);
     padding: 4px 4px;
@@ -279,6 +280,10 @@ input::-ms-clear {
 @media screen and (max-width: 768px) {
     .fc .fc-toolbar-title {
         font-size: 20px !important;
+    }
+
+    .tagify{
+        min-height: 36px;
     }
 }
 
